--- a/themes/RogersHood-theme/assets/css/blocks/index.css
+++ b/themes/RogersHood-theme/assets/css/blocks/index.css
@@ -34,3 +34,4 @@
 @import url("testimonials-section.css");
 @import url("suggested-products.css");
 @import url("top-help-search.css");
+@import url("text-and-video.css");
