--- a/themes/RogersHood-theme/assets/css/blocks/index.css
+++ b/themes/RogersHood-theme/assets/css/blocks/index.css
@@ -35,3 +35,4 @@
 @import url("suggested-products.css");
 @import url("top-help-search.css");
 @import url("text-and-video.css");
+@import url("hero-slider.css");
