fix suggested products

--- a/themes/RogersHood-theme/assets/css/blocks/suggested-products.css
+++ b/themes/RogersHood-theme/assets/css/blocks/suggested-products.css
@@ -9,9 +9,10 @@
 
 .suggested-products__title-container.col-lg-12 {
 	text-align: center;
+	justify-content: center;
 }
 
-@media all and (width > 992px ) {
+@media all and (width > 992px) {
 	.suggested-products__title {
 		max-width: 350px;
 	}
