--- a/themes/RogersHood-theme/assets/css/frontend/components/header.css
+++ b/themes/RogersHood-theme/assets/css/frontend/components/header.css
@@ -73,6 +73,7 @@
 
 .header__woo-link {
 	color: var(--wp--preset--color--black);
+	position: relative;
 }
 
 .menu-item__container {
@@ -194,6 +195,22 @@
 	display: flex;
 	justify-content: space-between;
 	padding: 35px 36px 12px 36px;
+}
+
+.cart-count-bubble {
+	position: absolute;
+	background-color: var(--wp--preset--color--light-blue);
+	color: var(--wp--preset--color--black);
+	height: 1rem;
+	width: 1rem;
+	border-radius: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 12px;
+	top: -8px;
+	right: -8px;
+	line-height: 10px;
 }
 
 @media only screen and (--bp-vertical-tablet) {
